--- a/TX52-report.tex
+++ b/TX52-report.tex
@@ -207,7 +207,7 @@ Firstly, the diagram below shows the class diagram of the environment :
 \begin{figure}[!ht]
  \parshape1 -3cm 21cm
  \centering
- \includegraphics[scale=0.5]{TX52Agent}
+ \includegraphics[scale=0.5]{TX52UML}
  \caption{Environment Class Diagram}
 \end{figure}
 \parshape0
@@ -376,6 +376,8 @@ Problem: the results are unexpected because as much as time goes by and the numb
 \chapter {Conclusion}
 
 In this research project we made an application almost from scratch. It was an intense and interesting experience for both of us. We had to document ourselves of the state of the research in this, design an engine and implemented it. Thanks of the previous works and the help of Stephane Galland our tutor this project was easier to accomplish. 
+
+~
 
 We are pretty happy of the performance that engine provide but if we had more time we would improve some points. For example, there is no path finding yet in the engine. It's some work that the user must do himself for now. Even if the engine is efficient for now we think that there are still some little things that could be improved.
 
